--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>Find Repo</title>
 </head>
 
 <body>
+    <div class="container">
+        <input type="text" autocomplete="on" class="repo">
+    </div>
 
 </body>
 
