--- a/index.html
+++ b/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <input type="text" autocomplete="on" class="repo">
+    <h1 class="h1">Find repo</h1>
+    <div class="wrapper">
+        <div class="wrapper__container">
+            <input type="text" autocomplete="on" class="wrapper__repo">
+        </div>
+        <div class="wrapper__saved-repo"></div>
     </div>
-
+    <script src="script.js"></script>
 </body>
 
 </html>
