--- a/index.html
+++ b/index.html
@@ -2,19 +2,15 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Find Repo</title>
 </head>
 
 <body>
-    <h1 class="h1">Find repo</h1>
-    <div class="wrapper">
-        <div class="wrapper__container">
-            <input type="text" autocomplete="on" class="wrapper__repo">
-        </div>
-        <div class="wrapper__saved-repo"></div>
+    <div class="app">
+
     </div>
     <script src="script.js"></script>
 </body>
