--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Find Repo</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>search</title>
 </head>
 
-<body>
-    <div class="app">
+<body class="body">
+    <main class="main">
+        <div class="autocomplete">
+            <input class="autocomplete-input" type="text">
+        </div>
 
-    </div>
-    <script src="script.js"></script>
+        <div class="wrapper-records"></div>
+    </main>
+
 </body>
+<script src="index.js"></script>
 
 </html>
